src/test/resources/github299/invalid/gbo_ast_fieber-beyer_spectra_v2.0_20210211_transfer_manifest_v1.0.tab
urn:nasa:pds:gbo_ast_fieber-beyer_spectra:data:fieberbeyeretal2012_329_tab::2.0                                                                                                                                                                                /data/fieberbeyeretal2012/329.xml                                                                                                                                                                                                                              
urn:nasa:pds:gbo_ast_fieber-beyer_spectra:data:fieberbeyeretal2012_329_tab::2.0                                                                                                                                                                                /data/fieberbeyeretal2012/329.tab                                                                                                                                                                                                                              
urn:nasa:pds:gbo_ast_fieber-beyer_spectra:data:fieberbeyer_gaffey2015_1587_tab::2.0                                                                                                                                                                            /data/fieberbeyer_gaffey2015/_158.xml                                                                                                                                                                                                                          
urn:nasa:pds:gbo_ast_fieber-beyer_spectra:data:fieberbeyer_gaffey2015_1587_tab::2.0                                                                                                                                                                            /data/fieberbeyer_gaffey2015/158.tab_                                                                                                                                                                                                                          
urn:nasa:pds:gbo_ast_fieber-beyer_spectra:data:fieberbeyer_gaffey2015_1587_tab::2.0                                                                                                                                                                            /data/fieberbeyer_gaffey2015/_.tab                                                                                                                                                                                                                             
